# website-summarizer_using_AI

./: .gitignore  README.md  pyproject.toml
src/: config.py
src/scraper/: web.py
src/summarizer/: prompt.py
